# rag-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  RESULTS.md  main.py  pyproject.toml
eval/: comparison_report.py  evaluate.py
eval/results/: evaluation_results.json
spec/: SPEC.md
src/: __init__.py  embedding.py  generation.py  ingestion.py  pipeline.py  retrieval.py  vectorstore.py
