[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "anthropic>=0.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]
